css/styles.css
* { box-sizing:border-box;
}

body {
  font-size: 16px;
  font-family: 'Cabin', sans-serif;
}

.page-container {
  margin-top: 60px;
  }

/* pokemon list button array */
.button-class {
  margin-left: 40%;
  margin-right: 40%;
  display: grid;
  font-size: 16px;
  padding: 5px;
  text-align: center;
  cursor: pointer;
  width: 20%;
  color: orange;
}

/* lines on either sides of button when hovering*/
.button-class:hover {
border-right-style: solid;
border-left-style: solid;
border-right-color: orange;
border-left-color: orange;
color: orange;
border-radius: 0%;
}

/* modal styling*/
.modal-header {
  background-color: darkgrey;
}

.modal-body {
  background-color: darkgrey;
}

.modal-footer {
  background-color: darkgrey;
}

.modal h1 {
  text-align: center;
  color: black;
  font-variant: small-caps;
}

.modal p {
  text-align: left;
  margin-bottom: 0;
  color: black;
}

.modal-image {
  display: block;
  width: 50%;
}

.pokemon-list {
  list-style-type: none;
}

/* "pokemon are opn their way" loading message*/
.loader {
  font-size:40px;
  text-align: center;
}

.hidden {
display: none;
}

